Added a reset button at top-left corner

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- HEADER -->
     <header>
         <h1>Rock Paper Scissors</h1>
+        <button id="button" onclick="callButton()">reset</button>
     </header>
     <!-- SCOREBOARD -->
     <div class="scoreboard">
